Fix some spelling errors and deprecated api usages